# projects

./: .gitignore  README.md
2025-2D-Monochalcogenide/: pyproject.toml  readme.md
2025-2D-Monochalcogenide/MachineLearningCorrelations/: readme.md
2025-2D-Monochalcogenide/MachineLearningXAI/: ML_correlation_analysis.ipynb  System_Descriptors.xlsx
2025-2D-Monochalcogenide/src/: CONST.py  GenerateFolderStructure.py  GenerateInitialFiles.py  GenerateInitialFilesDOS.py  KPOINTSCalculator.py  LatexWriter.py  POTCARSearch.py  ResultsExtractor.py  StructureHandler.py  VASPFileBuilder.py  VASPReadFiles.py  create_input_files.py  results_extractor_utils.py  utils.py
2025-2D-Monochalcogenide/src/Monochalcogenides2D/: __init__.py
2025-2D-Monochalcogenide/src/Monochalcogenides2D/common/: config.py  utils.py
2025-2D-Monochalcogenide/src/Monochalcogenides2D/vasp_data_extractor/: chgcar_parsers.py  doscar_parsers.py  incar_parsers.py  poscar_parsers.py
2025-2D-Monochalcogenide/src/vasp_builder/: bc_builder.py  config.py  utils.py
2025-2D-Monochalcogenide/src/vasp_data_extractor/: chgcar_parsers.py  doscar_parsers.py  outcar_parsers.py  poscar_parsers.py
2025-2D-Monochalcogenide/src/vasp_init/: config.py  incar_writer.py  kpoints_writer.py  poscar_writer.py  requirements.txt  utils.py  vasp_setup.py
2025-2D-Monochalcogenide/src/vasp_io/: config.py  incar_writer.py  kpoints_writer.py  poscar_writer.py  utils.py  vasp_setup.py
2025-2D-Monochalcogenide/src/vasp_iterate/: bc_builder.py  config.py  utils.py
(+6 files in other folders)
